--- a/app/src/main/res/layout/vresion_item.xml
+++ b/app/src/main/res/layout/vresion_item.xml
@@ -2,25 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/nomVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/nomVersionStyle"/>
+        <TextView
+            android:id="@+id/nomCodeVersion"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:id="@+id/numeroVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/image_list"/>
+        android:src="@drawable/image_list" />
 
 </LinearLayout>
